versão desktop + mobile + inicio JS

--- a/index.html
+++ b/index.html
@@ -10,27 +10,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="body">
+    <div class="game">
         <div class="title">
             <h1>PARROT CARD GAME</h1>
         </div>
 
-        <div class="container_card">
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
-            <div class="card"><img src="./files/front.png" alt=""></div>
+        <div class="containerCard" >
+        
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
