--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <div class="game">
         <div class="title">
             <h1>PARROT CARD GAME</h1>
+            <div class="timer">00</div>
         </div>
 
-        <div class="main">
+        <ul class="main">
             
-        </div>
+        </ul>
     </div>
 
     
